app/assets/stylesheets/games.scss
// Place all the styles related to the games controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.chessboard {
  width: 640px;
  height: 640px;
  margin: 0 auto .5em auto;
  border: 3px solid black;
}

tr:nth-child(even) td:nth-child(even), tr:nth-child(odd) td:nth-child(odd) {
  background-color: white;
}

tr:nth-child(even) td:nth-child(odd), tr:nth-child(odd) td:nth-child(even) {
  background-color: #006400;
}

tr, td {
  border: .01px black;
  margin: 0px;
  padding: 0px;
}

